--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -5,6 +5,7 @@ database.username=sa
 database.password=
 
 database.init=true
+database.driver=org.hsqldb.jdbcDriver
 
 jdbc.initLocation=initDB_hsql.sql
 jpa.showSql=true
