--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -7,8 +7,9 @@ database.username=user
 database.password=password
 
 database.init=true
+database.driver=org.postgresql.Driver
 
-#jdbc.initLocation=initDB.sql
+jdbc.initLocation=initDB_postgresql.sql
 jpa.showSql=true
-#hibernate.format_sql=true
-#hibernate.use_sql_comments=true
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
