--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -6,11 +6,6 @@
 
     <display-name>Gradproject</display-name>
 
-    <!--<context-param>-->
-        <!--<param-name>spring.profiles.default</param-name>-->
-        <!--<param-value>postgres,datajpa</param-value>-->
-    <!--</context-param>-->
-
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
@@ -18,16 +13,8 @@
             classpath:spring/spring-db.xml
         </param-value>
     </context-param>
-    <!--<filter>-->
-        <!--<filter-name>filterChainProxy</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-        <!--<filter-name>filterChainProxy</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
 
-    <!-- Spring MVC -->
+    <!--Spring MVC -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -44,6 +31,33 @@
         <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!-- Spring Security -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!--
         <servlet>
